[project]
name = "nmigate"
version = "0.0.15"
authors = [
  { name="Gustavo", email="gustavo.gordillo.giron@gmail.com" },
]
description = "A Nmi library for python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
