[project]
name = "nmigate"
version = "0.0.22"
authors = [
  { name="Gustavo", email="gustavo.gordillo.giron@gmail.com" },
]
description = "A Nmi library for python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests=^2.31.0",
    "xmltodict=^0.12.0",
]
